--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
 }
 
 #navbar {
-    background-color: crimson;
-    color: white;
+    background-color: wheat;
+    color: aqua;
     display: flex;
     justify-content: space-between;
     padding: 1rem;
@@ -53,4 +53,90 @@ body {
     #navbar ul {
         margin-top: 1rem;
     }
+}
+
+#showcase {
+    background: lightcoral#333 url("../img/tarantino.jpg") no-repeat center center/cover;
+    height: 100vh;
+    color: peru;
+}
+
+#showcase .showcase-content {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 0 2rem;
+    background-color: wheat;
+}
+
+.l-heading {
+    font-size: 4rem;
+    margin-bottom: 0.75rem;
+    line-height: 1.1;
+}
+
+.lead {
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
+}
+
+.btn {
+    display: inline-block;
+    color: green;
+    background: burlywood;
+    padding: 0.5rem 2rem;
+    border: none;
+    border-radius: 5px;
+}
+
+.btn:hover {
+    background: #333;
+    color: aliceblue;
+}
+
+.container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 0 2rem;
+    overflow: hidden;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.m-heading {
+    font-size: 2rem;
+    margin-bottom: 0.75rem;
+    line-height: 1.1;
+}
+
+.py-1 {
+    padding: 1.5rem 0;
+}
+.py-2 {
+    padding: 2rem 0;
+}
+.py-3 {
+    padding: 3rem 0;
+}
+
+#what .items {
+    display: flex;
+    padding: 1rem;
+}
+
+#what .item {
+    text-align: center;
+    padding: 1rem;
+}
+
+#what .items .item i {
+    background: burlywood;
+    padding: 1rem;
+    border-radius: 50%;
+    margin-bottom: 1rem;
 }
