--- a/style.css
+++ b/style.css
@@ -19,16 +19,15 @@ body {
 }
 
 #navbar {
-    background-color: wheat;
+    background-color: purple;
     color: aqua;
     display: flex;
     justify-content: space-between;
     padding: 1rem;
     flex-wrap: wrap;
 }
-
 #navbar a {
-    color: rgb(71, 177, 26);
+    color: bisque;
     text-decoration: none;
 }
 
@@ -54,11 +53,11 @@ body {
         margin-top: 1rem;
     }
 }
-
 #showcase {
-    background: lightcoral#333 url("../img/tarantino.jpg") no-repeat center center/cover;
+    background: #333 url("../img/showcase.jpg") no-repeat center center/cover; 
     height: 100vh;
-    color: peru;
+    width: 100%;
+    color: grey;
 }
 
 #showcase .showcase-content {
@@ -69,7 +68,7 @@ body {
     align-items: center;
     height: 100%;
     padding: 0 2rem;
-    background-color: wheat;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .l-heading {
@@ -85,8 +84,8 @@ body {
 
 .btn {
     display: inline-block;
-    color: green;
-    background: burlywood;
+    color: black;
+    background: purple;
     padding: 0.5rem 2rem;
     border: none;
     border-radius: 5px;
@@ -94,7 +93,7 @@ body {
 
 .btn:hover {
     background: #333;
-    color: aliceblue;
+    color: black;
 }
 
 .container {
@@ -135,8 +134,54 @@ body {
 }
 
 #what .items .item i {
-    background: burlywood;
+    background: black;
     padding: 1rem;
     border-radius: 50%;
     margin-bottom: 1rem;
+}
+
+.bg-light {
+    background:purple ;
+    color: white;
+}
+
+.bg-dark {
+    background: white;
+    color: purple;
+}
+
+.p-1 {
+    padding: 1.5rem;
+}
+
+.p-2 {
+    padding: 2rem;
+}
+
+.p-3 {
+    padding: 3rem;
+}
+
+.list {
+    margin: 0.5rem 0;
+    list-style: none;
+
+
+}
+
+.list li {
+    padding: 0.5rem 0;
+    border-bottom: black dotted 1px;
+}
+
+#who {
+    display: flex;
+}
+
+#who div {
+    flex: 1;
+}
+
+#who .who-img {
+    background: url("../img/movie.jpg") no-repeat center center/cover;
 }
